--- a/src/app/manager-main/manager.component.html
+++ b/src/app/manager-main/manager.component.html
@@ -5,3 +5,5 @@
     <button class="bg-success">maanger 3</button>
     <button class="bg-success">maanger 4</button>
 </div>
+<app-sender></app-sender>
+<app-receiver></app-receiver>
