--- a/src/app/sender/sender.component.html
+++ b/src/app/sender/sender.component.html
@@ -1,4 +1,4 @@
-<h4>Sender Component</h4>
+<h4>Send message to manager </h4>
 <div class="sender">
     <input type="name" ngModel (ngModelChange)="setDataByuser(name.value)" #name>
 </div>
