--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,11 @@
                 <a class="nav-link" routerLink="manager" routerLinkActive="active">Manager</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="login">Login</a>
+                <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
             </li>
         </ul>
+    </div>
+    <div class="nav-item float-end">
+        <a class="text-dark" routerLink="admin" routerLinkActive="active">Admin</a>
     </div>
 </nav>
