--- a/src/app/admin-root/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-root/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,7 @@
 <div class="class">
     admin dashboard
+
+</div>
+<div class="m-5 d-flex">
+    <button (click)="logoutadmin()" class=" btn-dark rounded-pill">Logout</button>
 </div>
