--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: hsl(44, 93%, 57%);">
-    <a class="navbar-brand" routerLink="">Application</a>
+    <a class="navbar-brand ms-3" routerLink="">Application</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -19,7 +19,7 @@
             </li>
         </ul>
     </div>
-    <div class="nav-item float-end">
+    <div class="nav-item float-end me-5">
         <a class="text-dark" routerLink="admin" routerLinkActive="active">Admin</a>
     </div>
 </nav>
