--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="true">
+<div class="container" *ngIf="false">
     <div class="row pt-5 justify-content-center">
         <div class=" col-sm-4 card bg-info">
             <div class="pt-3 card-title text-center h3">
@@ -31,7 +31,7 @@
                             <div class="mb-4 form-group">
                                 <label for="password" class="form-label">PASSWORD</label><br>
                                 <input ngModel type="password" class="form-control" id="loginPassword" name="password"
-                                    #loginPassword="ngModel" required minlength="8" pattern="">
+                                    #loginPassword="ngModel" required minlength="8">
                                 <span class="text-danger" *ngIf="loginPassword.hasError('minlength')">*Password length
                                     should be 8 character</span>
                             </div>
@@ -55,3 +55,5 @@
             </div>
         </div>
     </div>
+</div>
+<app-reactive-form></app-reactive-form>
