header design completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div class="nav nav-bar bg-dark d-flex">
+    <div class="nav-item">
+        <div class="nav-link text-light"><a>Log In</a></div>
+    </div>
+    <div class="nav-item">
+        <div class="nav-link text-light"><a>Register</a></div>
+    </div>
+</div>
+<app-tempalte-driven></app-tempalte-driven>
 <router-outlet></router-outlet>
