--- a/src/app/tempalte-driven/tempalte-driven.component.html
+++ b/src/app/tempalte-driven/tempalte-driven.component.html
@@ -1,1 +1,24 @@
-<p>tempalte-driven works!</p>
+<div class="container">
+    <div class="row p-5 justify-content-center">
+        <div class="card p-4 w-50 bg-dark">
+            <div class="card-title text-center p-2 bg-warning h3">
+                LOG IN
+            </div>
+            <div class="card-body bg-light">
+                <form>
+                    <div>
+                        <label for="loginusername" class="h5">Username<i class="text-danger">*</i></label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="mt-3">
+                        <label for="loginpassword" class="h5">Password<i class="text-danger">*</i></label>
+                        <input type="password" class="form-control">
+                    </div>
+                    <div class="d-flex justify-content-center mt-5 mb-2">
+                        <button class="btn btn-success w-50 rounded-pill" type="submit">Log in</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
