--- a/src/app/tempalte-driven/tempalte-driven.component.html
+++ b/src/app/tempalte-driven/tempalte-driven.component.html
@@ -5,20 +5,43 @@
                 LOG IN
             </div>
             <div class="card-body bg-light">
-                <form>
+                <form #loginForm="ngForm" (ngSubmit)="loginFormSubmit()">
                     <div>
-                        <label for="loginusername" class="h5">Username<i class="text-danger">*</i></label>
-                        <input type="text" class="form-control">
+                        <label for="loginUsername" class="h5">Username<i class="text-danger">*</i></label>
+                        <input type="text" class="form-control" id="loginUsername" name="loginUsername" ngModel
+                            #loginUsername="ngModel" required minlength="3">
+                        <div class="text-danger" *ngIf="loginUsername.dirty && loginUsername.invalid">
+                            <div *ngIf="loginUsername.errors?.['required']">
+                                *Username is required
+                            </div>
+                            <div *ngIf="loginUsername.errors?.['minlength']">
+                                *Username must be at least 3 characters long.
+                            </div>
+                        </div>
                     </div>
                     <div class="mt-3">
                         <label for="loginpassword" class="h5">Password<i class="text-danger">*</i></label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" name="loginPassword" ngModel
+                            #loginPassword="ngModel" required minlength="8">
+                        <div class="text-danger" *ngIf="loginPassword.touched && loginPassword.invalid">
+                            <div *ngIf="loginPassword.errors?.['required']">
+                                *Password is required
+                            </div>
+                            <div *ngIf="loginPassword.errors?.['minlength']">
+                                *Username must be at least 8 characters long.
+                            </div>
+                        </div>
                     </div>
                     <div class="d-flex justify-content-center mt-5 mb-2">
-                        <button class="btn btn-success w-50 rounded-pill" type="submit">Log in</button>
+                        <button class="btn btn-success w-50 rounded-pill" type="submit"
+                            [disabled]="loginForm.invalid">Log in</button>
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="p-5 text-center text-info">
+            <p>Username: {{loginUsers.username}}</p>
+            <p>Password: {{loginUsers.password}}</p>
         </div>
     </div>
 </div>
