--- a/src/app/relative/relative.component.html
+++ b/src/app/relative/relative.component.html
@@ -1,1 +1,70 @@
-<p>relative works!</p>
+<div class="container">
+    <div class="row p-4">
+        <div class="card p-3 w-50 bg-dark">
+            <div class="card-title text-center p-2 bg-warning h3 rounded-3">
+                REGISTRATION FORM
+            </div>
+            <div class="card-body bg-light m-3 rounded-3">
+                <form action="" class="mt-3">
+                    <div class="d-flex justify-content-between m-3">
+                        <div class="col-sm-5">
+                            <label for="firstname">Firstname</label>
+                            <input type="text" name="firstname" class="form-control" />
+                        </div>
+                        <div class="col-sm-5">
+                            <label for="lastname">Lastname</label>
+                            <input type="text" name="lastname" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="m-3 justify-content-evenly">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="m-3 justify-content-evenly">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="d-flex justify-content-between m-3">
+                        <div class="col-sm-5">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control">
+                        </div>
+                        <div class="col-sm-5">
+                            <label for="confirmpassword">Confrim Password</label>
+                            <input type="password" class="form-control">
+                        </div>
+                    </div>
+
+                    <div class="m-3 radio-inline justify-content-evenly">
+                        <label for="gendername">Gender</label>
+                        <div>
+                            <input type="radio" name="male" id="male" class="m-2">
+                            <label for="gender">Male</label>
+                            <input type="radio" name="male" id="male" class="m-2">
+                            <label for="gender">Female</label>
+                        </div>
+                    </div>
+                    <div>
+                        <label for="language" class="m-3">Language</label>
+                        <select name="language" class="form-select-sm">
+                            <option selected>Select Langauage</option>
+                            <option value="1">Hindi</option>
+                            <option value="2">Gujarati</option>
+                            <option value="3">English</option>
+                        </select>
+                    </div>
+                    <div class="m-3">
+                        <input type="checkbox">
+                        <label for="checkbox1" class="ms-2">I agree to recive mail.</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="checkbox2" class="ms-2">I agree with terms and conditions.</label>
+                    </div>
+                    <div class="d-flex justify-content-center mt-2 mb-2">
+                        <button type="submit" class="btn btn-success w-50 rounded-pill">Register</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
