--- a/src/app/relative/relative.component.html
+++ b/src/app/relative/relative.component.html
@@ -4,6 +4,7 @@
             <div class="card-title text-center p-2 bg-warning h3 rounded-3">
                 REGISTRATION FORM
             </div>
+
             <div class="card-body bg-light m-3 rounded-3">
                 <form class="mt-3" [formGroup]="reactiveForm" (ngSubmit)="onSubmitRegister(reactiveForm)">
                     <div class="d-flex justify-content-between m-3">
@@ -24,6 +25,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="m-3 justify-content-evenly">
                         <label for="email">Email<i class="text-danger">*</i></label>
                         <input type="text" class="form-control" formControlName="email">
@@ -37,6 +39,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="m-3 justify-content-evenly">
                         <label for="username">Username<i class="text-danger">*</i></label>
                         <input type="text" class="form-control" formControlName="username">
@@ -53,8 +56,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between m-3">
-                        <div class="col-sm-5">
+
+                    <div class="d-flex justify-content-between m-3" >
+                        <div class="col-sm-5 form-group">
                             <label for="password">Password<i class="text-danger">*</i></label>
                             <input type="password" class="form-control" formControlName="password">
                             <div class="text-danger">
@@ -70,9 +74,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-sm-5 form-group">
                             <label for="confirmpassword">Confrim Password<i class="text-danger">*</i></label>
                             <input type="password" class="form-control" formControlName="confirmpassword">
+                            <div class="text-danger">
+                                <div
+                                    *ngIf="reactiveForm.get('confirmpassword')?.hasError('notEquivalent') && reactiveForm.get('confirmpassword')?.touched">
+                                    *Password does not match
+                                </div>
+                            </div>
                         </div>
                     </div>
 
