built-in date pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
+<h2 class="d-flex justify-content-center bg-danger">PIPE</h2>
+<h3>Date</h3>
+<app-datepipe></app-datepipe>
 <router-outlet></router-outlet>
