custom pipe for currency

--- a/src/app/currencypipe/currencypipe.component.html
+++ b/src/app/currencypipe/currencypipe.component.html
@@ -5,6 +5,11 @@
 <p>currency value(INR code): {{value | currency :'INR':'code'}}</p>
 <p>currency value(INR symbol): {{value | currency :'INR':'symbol'}}</p>
 <p>currency value(INR string): {{value | currency :'INR':'Indian rupee'}}</p>
+
+<h5>DecimalPipe</h5>
 <p>currency value(INR symbol numberOfInteger:minimumFractions-maxFractions): {{value2 | currency :'INR':'symbol':'4.2-2'}}</p>
 <p>currency value(INR symbol numberOfInteger:minimumFractions-maxFractions): {{value2 | currency :'INR':'symbol':'3.1-1'}}</p>
 
+<h5>Custom currency pipe</h5>
+(arrayValue=[1,2,3,4])
+<p>multiplication of array values:{{arrayValue | customcurrency}}</p>
