component genrate for slice pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h2 class="d-flex justify-content-center bg-danger">PIPE</h2>
-<h3>Date</h3>
 <app-datepipe></app-datepipe>
 <hr>
 <app-currencypipe></app-currencypipe>
+<hr>
+<app-slicepipe></app-slicepipe>
 <router-outlet></router-outlet>
