slice pipe implement

--- a/src/app/slicepipe/slicepipe.component.html
+++ b/src/app/slicepipe/slicepipe.component.html
@@ -1,1 +1,15 @@
 <h3>Slice pipe</h3>
+<h5>Slice in array sliceArray=['apple','bannana','cherry','Dargon fruit'];</h5>
+<p>{{sliceArray | slice:0:3}}</p>
+<p>{{sliceArray | slice:0:-3}}</p>
+<p>{{sliceArray | slice:1:-1}}</p>
+<p>{{sliceArray | slice:-4:-1}}</p>
+
+<h5>Slice in string sliceString:string='hello everyone welcome in pipe session'; </h5>
+<p>{{sliceString | slice:0:3}}</p>
+<p>{{sliceString | slice:0:9}}</p>
+<p>{{sliceString | slice:1:-9}}</p>
+<p>{{sliceString | slice:-4:-1}}</p>
+
+<hr>
+<h3>Percent pipe</h3>
