async pipe impelement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 <app-currencypipe></app-currencypipe>
 <hr>
 <app-slicepipe></app-slicepipe>
+<hr>
+<app-asyncpipe></app-asyncpipe>
 <router-outlet></router-outlet>
