--- a/src/app/asyncpipe/asyncpipe.component.html
+++ b/src/app/asyncpipe/asyncpipe.component.html
@@ -1,1 +1,4 @@
-<p>asyncpipe works!</p>
+<h3>Async pipe </h3>
+<p>Time (Obsevable async):  {{time | async}}</p>
+<p>NewNumber (Obsevable async):  {{newNumber | async}}</p>
+<p>Promise async after 3000ms:  {{promise | async}}</p>
