json pipe impelemnt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 <app-slicepipe></app-slicepipe>
 <hr>
 <app-asyncpipe></app-asyncpipe>
+<hr>
+<app-jsonpipe></app-jsonpipe>
 <router-outlet></router-outlet>
