--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,6 @@
         <p>id: {{items.id}}</p>
     </span>
 </ul>
+<button (click)="deleteOnclick()">DELETE</button>
+
 <router-outlet></router-outlet>
